--- a/manifest.json
+++ b/manifest.json
@@ -8,14 +8,15 @@
   "theme_color": "#000000",
   "icons": [
     {
-      "src": "../../../images/Device__icon/icon-196x196.png",
+      "src": "images/Device__icon/icon-196x196.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "../../../images/Device__icon/icon-512x512.png",
+      "src": "images/Device__icon/icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
   ]
 }
+
